# Koyosai2022-score-server

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: docker-compose.yml
api/: main.py
api/cruds/: ranking.py  score.py  user.py
api/models/: score.py  user.py
api/routers/: ranking.py  score.py  user.py
api/schemas/: ranking.py  score.py  user.py
db/: database.py  seed.py
db/migrations/: env.py
db/migrations/versions/: e89ce2503782_create_score_table.py  f6453a26e516_create_user_table.py
references/: er.dio
